--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/icunial/jest_unitTesting#readme",
   "devDependencies": {
     "jest": "^29.6.2"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
